--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "path": "^0.12.7",
     "prop-types": "^15.5.10",
     "style-loader": "^1.3.0",
+    "svg-url-loader": "^6.0.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1"
   },
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server",
-    "build": "./node_modules/.bin/webpack"
+    "dev": "./node_modules/.bin/webpack-dev-server",
+    "start": "./node_modules/.bin/webpack"
   }
 }
